fixed header z-index

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ a {
   position: sticky;
   top: 0;
   background-color: #fff;
+  z-index: 1;
 }
 
 .header-content {
